Design : Update Zomm in Website

--- a/src/administration/admins/templates/admins/include/admin_nav.html
+++ b/src/administration/admins/templates/admins/include/admin_nav.html
@@ -9,19 +9,19 @@
             <div class="navbar-brand-box">
                 <a href="/" class="logo logo-dark">
                                 <span class="logo-sm">
-                                    <img src="{% static 'final_logo.png' %}" alt="" height="35">
+                                    <img src="{% static 'Logo_New_rajeshtan 1.png' %}" alt="" height="35">
                                 </span>
                     <span class="logo-lg">
-                                    <img src="{% static 'final_logo.png' %}" alt="" height="35">
+                                    <img src="{% static 'Logo_New_rajeshtan 1.png' %}" alt="" height="35">
                                 </span>
                 </a>
 
                 <a href="/" class="logo logo-light">
                                 <span class="logo-sm">
-                                    <img src="{% static 'final_logo.png' %}" alt="" height="35">
+                                    <img src="{% static 'Logo_New_rajeshtan 1.png' %}" alt="" height="35">
                                 </span>
                     <span class="logo-lg">
-                                    <img src="{% static 'final_logo.png' %}" alt="" height="35">
+                                    <img src="{% static 'Logo_New_rajeshtan 1.png' %}" alt="" height="35">
                                 </span>
                 </a>
             </div>
