--- a/src/administration/admins/templates/admins/include/header.html
+++ b/src/administration/admins/templates/admins/include/header.html
@@ -8,7 +8,7 @@
         </button>
         <h1 class="navbar-brand navbar-brand-autodark d-none-navbar-horizontal pe-0 pe-md-3">
             <a href="{% url 'account_login' %}">
-                <img src="{% static 'final_logo.png' %}" width="110"
+                <img src="{% static 'Logo_New_rajeshtan 1.png' %}" width="110"
                      height="100" alt="Ecommerce"
                      class="navbar-brand-image">
             </a>
