--- a/src/website/templates/website/home.html
+++ b/src/website/templates/website/home.html
@@ -129,7 +129,7 @@
     <!-- category section end -->
 
     <!-- product section start -->
-    <section class="product_section sec_space_xxs_50" data-aos="fade-up" data-aos-duration="2000">
+    <section class="product_section sec_space_xxs_50" >
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-6">
@@ -558,20 +558,19 @@
     </section>
     <!-- product section start -->
 
-    <section class="deal_section sec_space_xs_70 aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
+    <section class="deal_section sec_space_xs_70 " >
         <div class="container-fluid">
             <div class="row justify-content-center align-items-center">
                 <div class="col-md-6 col-lg-4">
                     <div class="deal_item_content_wrap">
                         <div class="deal_item_content position-relative aos-init aos-animate"
-                             style="background-image: url('{% static 'website/images/deals/deals1.png' %}');"
-                             data-aos="flip-right" data-aos-duration="1000">
+                             style="background-image: url('{% static 'website/images/deals/deals1.png' %}');">
                             <div class="deal_item_txt position-absolute">
                                 <div class="deal_sub_title">
                                     <h5 class="text-white">FRESH FROM OUR FARM</h5>
                                 </div>
-                                <div class="deal_title aos-init aos-animate " data-aos="flip-left"
-                                     data-aos-duration="1000">
+                                <div class="deal_title"
+                                   >
                                     <h3 class="text-white">Get Every Dry Fruit You Need</h3>
                                 </div>
                                 <div class="deal_btn">
@@ -586,15 +585,15 @@
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="deal_item_content_wrap">
-                        <div class="deal_item_content position-relative aos-init aos-animate"
+                        <div class="deal_item_content position-relative aos-init "
                              style="background-image: url('{% static 'website/images/deals/deals2.png' %}');"
-                             data-aos="flip-right" data-aos-duration="1500">
+                             >
                             <div class="deal_item_txt position-absolute">
                                 <div class="deal_sub_title">
                                     <h5 class="text-white">FRESH FROM OUR FARM</h5>
                                 </div>
-                                <div class="deal_title aos-init aos-animate" data-aos="flip-left"
-                                     data-aos-duration="1500">
+                                <div class="deal_title "
+                                     >
                                     <h3 class="text-white">Get Discounts on Dry Fruits You Need</h3>
                                 </div>
                                 <div class="deal_btn">
@@ -609,15 +608,14 @@
                 </div>
                 <div class="col-md-6 col-lg-4">
                     <div class="deal_item_content_wrap">
-                        <div class="deal_item_content position-relative aos-init aos-animate"
+                        <div class="deal_item_content position-relative"
                              style="background-image: url('{% static 'website/images/deals/deals3.png' %}');"
-                             data-aos="flip-right" data-aos-duration="2000">
+                            >
                             <div class="deal_item_txt position-absolute">
                                 <div class="deal_sub_title">
                                     <h5 class="text-white">FRESH FROM OUR FARM</h5>
                                 </div>
-                                <div class="deal_title aos-init aos-animate" data-aos="flip-left"
-                                     data-aos-duration="2000">
+                                <div class="deal_title">
                                     <h3 class="text-white">First Deal Dry Fruit You Need</h3>
                                 </div>
                                 <div class="deal_btn">
@@ -636,7 +634,7 @@
 
 
 
-    <section class="product_section sec_space_xxs_50 aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
+    <section class="product_section sec_space_xxs_50 ">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
@@ -746,7 +744,7 @@
             <div class="row g-4">
                 {% for product in popular_discount %}
                     <div class="col-md-6">
-                        <div class="offer_inner_content" data-aos="fade-right" data-aos-duration="1000">
+                        <div class="offer_inner_content"  data-aos-duration="1000">
                             <div class="offer_item_content bg-white d-flex align-items-center">
                                 <div class="offer_item_img pe-4">
                                     <img src="{{ product.thumbnail_image|image_or_placeholder }}" alt="offer1">
@@ -809,8 +807,7 @@
     </section>
 
     <!-- testimonial section start -->
-    <section class="gallery_section sec_space_xxs_50 position-relative aos-init aos-animate" data-aos="fade-up"
-             data-aos-duration="2000">
+    <section class="gallery_section sec_space_xxs_50 position-relative" >
         <div class="gallery_content_wrap inner_sec_sm"
              style="background-image: url({% static 'website/images/gallery/gallery.png' %});padding-top: 250px">
             <div class="container">
@@ -820,13 +817,12 @@
         </div>
     </section>    <!-- testimonial section end -->
 
-    <section class="service_setion sec_space_xxs_50 aos-init aos-animate" data-aos="fade-up" data-aos-duration="2000">
+    <section class="service_setion sec_space_xxs_50 ">
         <div class="service_content_wrap">
             <div class="container">
                 <div class="row">
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="service_inner_content d-flex justify-content-center align-items-center aos-init aos-animate"
-                             data-aos="fade-up" data-aos-duration="500">
+                        <div class="service_inner_content d-flex justify-content-center align-items-center ">
                             <div class="service_content_icon rounded-pill me-2">
                                 <i class="fas fa-shipping-fast"></i>
                             </div>
@@ -841,8 +837,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="service_inner_content d-flex justify-content-center align-items-center aos-init aos-animate"
-                             data-aos="fade-up" data-aos-duration="1000">
+                        <div class="service_inner_content d-flex justify-content-center align-items-center "
+                             >
                             <div class="service_content_icon rounded-pill me-2">
                                 <i class="fas fa-user-shield"></i>
                             </div>
@@ -857,8 +853,8 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="service_inner_content d-flex justify-content-center align-items-center aos-init aos-animate"
-                             data-aos="fade-up" data-aos-duration="1500">
+                        <div class="service_inner_content d-flex justify-content-center align-items-center "
+                            >
                             <div class="service_content_icon rounded-pill me-2">
                                 <i class="fas fa-exchange-alt"></i>
                             </div>
@@ -873,8 +869,7 @@
                         </div>
                     </div>
                     <div class="col-6 col-md-4 col-xl-3">
-                        <div class="service_inner_content d-flex justify-content-center align-items-center aos-init aos-animate"
-                             data-aos="fade-up" data-aos-duration="2000">
+                        <div class="service_inner_content d-flex justify-content-center align-items-center" >
                             <div class="service_content_icon rounded-pill me-2">
                                 <i class="fas fa-shipping-fast"></i>
                             </div>
