--- a/templates/website/include/footer.html
+++ b/templates/website/include/footer.html
@@ -6,7 +6,7 @@
             <div class="container">
                <div class="footer_top_content d-flex flex-column flex-lg-row justify-content-between align-items-center">
                   <div class="footer_top_logo">
-                     <a href="{%  url 'website:home' %}"><img src="{% static 'website/images/logo/logo.png' %}" style="height: 100px" alt="image_not_found"></a>
+                     <a href="{%  url 'website:home' %}"><img src="{% static 'final_logo.png' %}" style="height: 60px" alt="image_not_found"></a>
                   </div>
                   <div class="footer_top_subs position-relative">
                      <input class="rounded-pill" type="search" name="search" placeholder="Your Phone Number">
